# mipt_cpp_hw

./: .clang-format  .gitignore  CMakeLists.txt  README.md
spring/: CMakeLists.txt
spring/hw1/: CMakeLists.txt  README.md
spring/hw1/05.05/: CMakeLists.txt  main.cpp
spring/hw1/06.04/: install_all_libs_in_container.sh
spring/hw1/06.05/: CMakeLists.txt  lib_v1.cpp  lib_v2.cpp  main.cpp
spring/hw1/07.01/: CMakeLists.txt  main.cpp
spring/hw1/07.02/: CMakeLists.txt  main.cpp
spring/hw1/07.03/: CMakeLists.txt  main.cpp
spring/hw1/07.04/: CMakeLists.txt  main.cpp
spring/hw1/07.05/: CMakeLists.txt  main.cpp
spring/hw1/08.01/: CMakeLists.txt  main.cpp
spring/hw1/08.02/: CMakeLists.txt  main.cpp
spring/hw1/08.03/: CMakeLists.txt  main.cpp
spring/hw1/08.04/: CMakeLists.txt  main.cpp
spring/hw1/08.05/: CMakeLists.txt  main.cpp
spring/hw2/: CMakeLists.txt  README.md
spring/hw2/09.01/: CMakeLists.txt  main.cpp
spring/hw2/09.02/: CMakeLists.txt  main.cpp
spring/hw2/09.03/: CMakeLists.txt  main.cpp
spring/hw2/09.04/: CMakeLists.txt  main.cpp
spring/hw2/09.05/: CMakeLists.txt  main.cpp
spring/hw2/09.06/: CMakeLists.txt  main.cpp
spring/hw2/09.07/: CMakeLists.txt  main.cpp
spring/hw2/09.08/: CMakeLists.txt  main.cpp
spring/hw2/09.09/: CMakeLists.txt  main.cpp
spring/hw2/09.10/: CMakeLists.txt  main.cpp
spring/hw2/10.01/: CMakeLists.txt  main.cpp
spring/hw2/10.02/: CMakeLists.txt  main.cpp
spring/hw2/10.03/: CMakeLists.txt  main.cpp
spring/hw2/10.04/: CMakeLists.txt  main.cpp
spring/hw2/10.05/: CMakeLists.txt  collisions.csv  main.cpp  plot.py
spring/hw2/11.01/: CMakeLists.txt  main.cpp
spring/hw2/11.03/: CMakeLists.txt  main.cpp
